# VoxelCpp

./: .gitignore  CMakeLists.txt  README.md  compile_shaders.bat
include/VoxelCpp/app/: App.hpp  ProgramConstants.hpp
include/VoxelCpp/game/: GameObject.hpp
include/VoxelCpp/input/: KeyboardMovementController.hpp
include/VoxelCpp/physics/: RigidBody.hpp
include/VoxelCpp/rendering/: BillboardSystem.hpp  Buffer.hpp  Camera.hpp  Descriptors.hpp  Device.hpp  FrameInfo.hpp  Model.hpp  Pipeline.hpp  RenderSystem.hpp  Renderer.hpp  Rendering.hpp  Swapchain.hpp  Window.hpp
include/VoxelCpp/util/: ObjectHashing.hpp
include/ksc_log/: ksc_log.hpp
lib/: KSC_Log.lib
res/shaders/: billboard_shader.frag  billboard_shader.frag.spv  billboard_shader.vert  billboard_shader.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
src/app/: App.cpp  VoxelCpp.cpp
src/game/: GameObject.cpp
src/input/: KeyboardMovementController.cpp
src/physics/: RigidBody.cpp
src/rendering/: BillboardSystem.cpp  Buffer.cpp  Camera.cpp  Descriptors.cpp  Device.cpp  Model.cpp  Pipeline.cpp  RenderSystem.cpp  Renderer.cpp  Rendering.cpp  Swapchain.cpp  Window.cpp
